--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -223,6 +223,7 @@
 	<script src="/assets/js/jquery.nicescroll.min.js"></script>
 	<script src="/assets/js/plugins.js"></script>
 	<script src="/assets/js/main.js"></script>
+	@RenderSection("Script", false)
 </body>
 
 <!-- Mirrored from htmldemo.net/tm/eduhome/eduhome/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 24 Jun 2023 06:57:08 GMT -->
