User registration done

--- a/EduHomeUI/Views/Auth/Register.cshtml
+++ b/EduHomeUI/Views/Auth/Register.cshtml
@@ -17,13 +17,18 @@
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
                                     <label asp-for="FirstName" class="form-label"></label>
-                                    <input asp-for="FirstName" type="text" class="form-control" >
+                                    <input asp-for="FirstName" type="text" class="form-control">
                                     <span asp-validation-for="FirstName" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="LastName" class="form-label"></label>
-                                    <input asp-for="LastName" type="text" class="form-control" >
+                                    <input asp-for="LastName" type="text" class="form-control">
                                     <span asp-validation-for="LastName" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="UserName" class="form-label"></label>
+                                    <input asp-for="UserName" type="text" class="form-control">
+                                    <span asp-validation-for="UserName" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="EmailAddress" class="form-label"></label>
