--- a/EduHomeUI/Views/Auth/Register.cshtml
+++ b/EduHomeUI/Views/Auth/Register.cshtml
@@ -13,35 +13,40 @@
                             <span>Please fill in the following details to create your account.</span>
                         </div>
                         <div class="login-form">
-                            <form  method="post">
+                            <form method="post">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
-                                    <label asp-for="FirstName" class="form-label"></label>
+                                    <label asp-for="FirstName" class="form-label">First Name</label>
                                     <input asp-for="FirstName" type="text" class="form-control">
                                     <span asp-validation-for="FirstName" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="LastName" class="form-label"></label>
+                                    <label asp-for="LastName" class="form-label">Last Name</label>
                                     <input asp-for="LastName" type="text" class="form-control">
                                     <span asp-validation-for="LastName" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="UserName" class="form-label"></label>
+                                    <label asp-for="DateOfBirth" class="form-label">Date of Birth</label>
+                                    <input asp-for="DateOfBirth" type="date" class="form-control">
+                                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="UserName" class="form-label">Username</label>
                                     <input asp-for="UserName" type="text" class="form-control">
                                     <span asp-validation-for="UserName" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="EmailAddress" class="form-label"></label>
-                                    <input asp-for="EmailAddress" type="email" class="form-control" >
+                                    <label asp-for="EmailAddress" class="form-label">Email Address</label>
+                                    <input asp-for="EmailAddress" type="email" class="form-control">
                                     <span asp-validation-for="EmailAddress" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Password" class="form-label"></label>
-                                    <input asp-for="Password" type="password" class="form-control" >
+                                    <label asp-for="Password" class="form-label">Password</label>
+                                    <input asp-for="Password" type="password" class="form-control">
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="ConfirmPassword" class="form-label"></label>
+                                    <label asp-for="ConfirmPassword" class="form-label">Confirm Password</label>
                                     <input asp-for="ConfirmPassword" type="password" class="form-control" />
                                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                                 </div>
@@ -56,8 +61,14 @@
                                     <button type="submit" class="btn btn-primary" style="background-color: transparent; color: red; border: 2px solid red;">Sign Up</button>
                                 </div>
 
+                                <div class="form-group">
+                                    <p>Already have an account? <a asp-action="Login">Log in</a></p>
+                                </div>
+
                                 <partial name="_ValidationScript" />
                             </form>
+
+
 
 
                         </div>
