--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 					<div class="col-md-4 col-sm-4">
 						<div class="header-top-right text-md-end text-center">
 							<ul>
-								<li><a href="login.html">login</a></li>
+								<li><a asp-controller="Auth" asp-action="Login">login</a></li>
 								<li><a asp-controller="Auth" asp-action="Register">signup</a></li>
 							</ul>
 						</div>
