--- a/EduHomeUI/Views/Auth/Login.cshtml
+++ b/EduHomeUI/Views/Auth/Login.cshtml
@@ -29,7 +29,7 @@
                                     <div class="login-toggle-btn">
                                         <input type="checkbox" id="remember" asp-for="RememberMe">
                                         <label for="remember">Remember me</label>
-                                        <a href="#">Forgot Password?</a>
+                                        <a asp-action="ForgotPassword">Forgot Password?</a>
                                     </div>
                                 </div>
                                 <div class="form-group" style="margin-top: 20px;">
