--- a/EduHomeUI/Views/Auth/Error.cshtml
+++ b/EduHomeUI/Views/Auth/Error.cshtml
@@ -1,1 +1,2 @@
-﻿<h1>Error Occured</h1>
+﻿<h1 class="text-danger">Error</h1>
+<h2 class="text-danger">An error occurred while processing your request.</h2>
