--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -43,10 +43,16 @@
 					<div class="col-md-4 col-sm-4">
 						<div class="header-top-right text-md-end text-center">
 							<ul>
-								<li><a asp-controller="Auth" asp-action="Login">My account</a></li>
-								<li><a asp-controller="Auth" asp-action="Logout">Logout</a></li>
-								<li><a asp-controller="Auth" asp-action="Login">login</a></li>
-								<li><a asp-controller="Auth" asp-action="Register">signup</a></li>
+								@if (User.Identity.IsAuthenticated)
+								{
+									<li><a asp-controller="Auth">My account</a></li>
+									<li><a asp-controller="Auth" asp-controller="Auth" asp-action="Logout">Logout</a></li>
+								}
+								else
+								{
+									<li><a asp-controller="Auth" asp-action="Login">login</a></li>
+									<li><a asp-controller="Auth" asp-action="Register">signup</a></li>
+								}
 							</ul>
 						</div>
 					</div>
