Blog Create view done

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Blog/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Blog/Index.cshtml
@@ -22,6 +22,7 @@
                                     <th>Title</th>
                                     <th>AuthorName</th>
                                     <th>CommentCount</th>
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
