--- a/EduHomeUI/Areas/EHMasterPanel/Views/Event/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Event/Index.cshtml
@@ -24,6 +24,7 @@
                                     <th>Date</th>
                                     <th>StartTime</th>
                                     <th>EndTime</th>
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
