--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -470,7 +470,7 @@
 
 
                                 <li><a asp-controller="Testimonials" asp-action="Index">Testimonials</a></li>
-                                <li><a asp-controller="Blogs" asp-action="Index">Blogs</a></li>
+                                <li><a asp-controller="Blog" asp-action="Index">Blogs</a></li>
                             </ul>
                         </li>
 
