--- a/EduHomeUI/Areas/EHMasterPanel/Views/Speaker/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Speaker/Index.cshtml
@@ -21,6 +21,7 @@
                                 <th>Surname</th>
                                 <th>Position</th>
                                 <th>Company Name</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody>
