--- a/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Index.cshtml
@@ -22,6 +22,7 @@
                                     <th>Name</th>
                                     <th>Surname</th>
                                     <th>Position</th>
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
