--- a/EduHomeUI/Views/Shared/_CaptchaInput.cshtml
+++ b/EduHomeUI/Views/Shared/_CaptchaInput.cshtml
@@ -1,4 +1,4 @@
-﻿@using EduHomeUI.ViewModels.UsersViewModel;
+﻿@*@using EduHomeUI.ViewModels.UsersViewModel;
 @model UserRegisterViewModel
 
-<input type="hidden" asp-for="Captcha" id="captchaInput" />
+<input type="hidden" asp-for="Captcha" id="captchaInput" />*@
