--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+﻿@using EduHomeUI.Areas.EHMasterPanel.Models;
+@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
 @model CourseIndexViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
