--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
@@ -15,7 +15,7 @@
                     <h4 class="card-title">Courses</h4>
                     <a asp-controller="Course" asp-action="Create" class="btn btn-primary mb-4">Create New Course</a>
                     <div class="table-responsive">
-                        <table class="table table-striped table-bordered table-hover">
+                        <table class="table table-striped table-bordered table-hover" id="dataTableData">
                             <thead>
                                 <tr>
                                     <th>#</th>
@@ -53,3 +53,6 @@
         </div>
     </div>
 </div>
+@section Scripts{
+    <script src="~/datatable_file.js"></script>
+}
