--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Index.cshtml
@@ -14,7 +14,7 @@
                     <h4 class="card-title">Categories</h4>
                     <a asp-action="Create" class="btn btn-primary mb-4">Create New Category</a>
                     <div class="table-responsive">
-                        <table class="table table-striped table-bordered table-hover">
+                        <table class="table table-striped table-bordered table-hover" id="dataTableData">
                             <thead>
                                 <tr>
                                     <th>#</th>
@@ -50,3 +50,6 @@
         </div>
     </div>
 </div>
+@section Scripts{
+    <script src="~/datatable_file.js"></script>
+}
