--- a/EduHomeUI/Areas/EHMasterPanel/Views/Language/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Language/Index.cshtml
@@ -12,7 +12,7 @@
                 <h4 class="card-title">Languages</h4>
                 <a asp-controller="Language" asp-action="Create" class="btn btn-primary mb-4">Create New Language</a>
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered">
+                    <table class="table table-striped table-bordered" id="dataTableData">
                         <thead>
                             <tr>
                                 <th>#</th>
@@ -43,3 +43,6 @@
         </div>
     </div>
 </div>
+@section Scripts{
+    <script src="~/datatable_file.js"></script>
+}
