--- a/EduHomeUI/Areas/EHMasterPanel/Views/Skill/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Skill/Index.cshtml
@@ -13,7 +13,7 @@
                 <h4 class="card-title">Skill Levels</h4>
                 <a asp-controller="Skill" asp-action="Create" class="btn btn-primary mb-4">Create New SkillLevel</a>
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered">
+                    <table class="table table-striped table-bordered" id="dataTableData">
                         <thead>
                             <tr>
                                 <th>#</th>
@@ -44,3 +44,6 @@
         </div>
     </div>
 </div>
+@section Scripts{
+    <script src="~/datatable_file.js"></script>
+}
