--- a/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Teacher/Index.cshtml
@@ -14,7 +14,7 @@
                     <h4 class="card-title">Teachers</h4>
                     <a asp-controller="Teacher" asp-action="Create" class="btn btn-primary mb-4">Create New Teacher</a>
                     <div class="table-responsive">
-                        <table class="table table-striped table-bordered table-hover">
+                        <table class="table table-striped table-bordered table-hover" id="dataTableData">
                             <thead>
                                 <tr>
                                     <th>#</th>
@@ -54,3 +54,6 @@
         </div>
     </div>
 </div>
+@section Scripts{
+    <script src="~/datatable_file.js"></script>
+}
