google login added

--- a/EduHomeUI/Views/Auth/Login.cshtml
+++ b/EduHomeUI/Views/Auth/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@using EduHomeUI.ViewModels.UsersViewModel;
+﻿@using EduHome.Core.Entities;
+@using EduHomeUI.ViewModels.UsersViewModel;
+@using Microsoft.AspNetCore.Identity;
 @model UserLoginViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -37,6 +39,7 @@
                                 </div>
                             </form>
                         </div>
+                        <partial name="_ExternalAuthentication" />
                     </div>
                 </div>
             </div>
