--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -60,6 +60,13 @@
                             <span asp-validation-for="ClassDuration" class="text-danger"></span>
                         </div>
                     </div>
+                    <div class="row mb-3">
+                        <label asp-for="StudentCount" class="col-md-3 col-form-label">Student Count</label>
+                        <div class="col-sm-9">
+                            <input asp-for="StudentCount" class="form-control" />
+                            <span asp-validation-for="StudentCount" class="text-danger"></span>
+                        </div>
+                    </div>
 
                     <div class="row mb-3">
                         <label asp-for="CourseFee" class="col-md-3 col-form-label">Course Fee</label>
