--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
@@ -1,7 +1,14 @@
-﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+﻿@using EduHome.Core.Entities;
+@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
 @model CourseViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@{
+    var assessmentOptions = ViewBag.AssessmentOptions as List<Assesment>;
+    var skillLevelOptions = ViewBag.SkillLevelOptions as List<SkillLevel>;
+    var languageOptions = ViewBag.LanguageOptions as List<Language>;
+    var courseCategories = ViewBag.CourseCategories as List<CourseCategory>;
+}
 <form asp-controller="Course" asp-action="Update" method="post">
     <div class="row">
         <div class="col-xl-6">
@@ -70,9 +77,12 @@
                         <div class="col-sm-9">
                             <select asp-for="AssesmentId" class="form-control">
                                 <option value="">-- Select Assessment --</option>
-                                @foreach (var assessment in ViewBag.AssessmentOptions)
+                                @if (assessmentOptions != null)
                                 {
-                                    <option value="@assessment.Id">@assessment.AssesmentType</option>
+                                    foreach (var assessment in assessmentOptions)
+                                    {
+                                        <option value="@assessment.Id">@assessment.AssesmentType</option>
+                                    }
                                 }
                             </select>
                             <span asp-validation-for="AssesmentId" class="text-danger"></span>
@@ -84,23 +94,30 @@
                         <div class="col-sm-9">
                             <select asp-for="SkillLevelId" class="form-control">
                                 <option value="">-- Select Skill Level --</option>
-                                @foreach (var skillLevel in ViewBag.SkillLevelOptions)
+                                @if (skillLevelOptions != null)
                                 {
-                                    <option value="@skillLevel.Id">@skillLevel.Skill</option>
+                                    foreach (var skillLevel in skillLevelOptions)
+                                    {
+                                        <option value="@skillLevel.Id">@skillLevel.Skill</option>
+                                    }
                                 }
                             </select>
                             <span asp-validation-for="SkillLevelId" class="text-danger"></span>
                         </div>
                     </div>
 
+
                     <div class="row mb-4">
                         <label asp-for="LanguageOptionId" class="col-sm-3 col-form-label">Language Option</label>
                         <div class="col-sm-9">
                             <select asp-for="LanguageOptionId" class="form-control">
                                 <option value="">-- Select Language Option --</option>
-                                @foreach (var languageOption in ViewBag.LanguageOptions)
+                                @if (languageOptions != null)
                                 {
-                                    <option value="@languageOption.Id">@languageOption.LanguageOption</option>
+                                    foreach (var languageOption in languageOptions)
+                                    {
+                                        <option value="@languageOption.Id">@languageOption.LanguageOption</option>
+                                    }
                                 }
                             </select>
                             <span asp-validation-for="LanguageOptionId" class="text-danger"></span>
@@ -112,15 +129,17 @@
                         <div class="col-sm-9">
                             <select asp-for="CourseCategoryId" class="form-control">
                                 <option value="">-- Select Course Category --</option>
-                                @foreach (var category in ViewBag.CourseCategories)
+                                @if (courseCategories != null)
                                 {
-                                    <option value="@category.Id">@category.Category</option>
+                                    foreach (var category in courseCategories)
+                                    {
+                                        <option value="@category.Id">@category.Category</option>
+                                    }
                                 }
                             </select>
                             <span asp-validation-for="CourseCategoryId" class="text-danger"></span>
                         </div>
                     </div>
-
 
                     <div class="mb-3 row">
                         <label asp-for="Description" class="col-md-2 col-form-label">Description</label>
