--- a/EduHomeUI/Views/Home/Index.cshtml
+++ b/EduHomeUI/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <section id="slider-container" class="slider-area">
     <div class="slider-owl owl-theme owl-carousel">
         <!-- Start Slingle Slide -->
-        <div class="single-slide item" style="background-image: url(img/slider/slider1.jpg)">
+        <div class="single-slide item" style="background-image: url(/assets/img/slider/slider1.jpg)">
             <!-- Start Slider Content -->
             <div class="slider-content-area">
                 <div class="container">
