notice services done index view done

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -468,10 +468,7 @@
                                 <li><a asp-controller="Event" asp-action="Index">Events</a></li>
                                 <li><a asp-controller="Speaker" asp-action="Index">Speakers</a></li>
                                 <li><a asp-controller="Teacher" asp-action="Index">Teachers</a></li>
-
-
-
-                                <li><a asp-controller="Testimonials" asp-action="Index">Testimonials</a></li>
+                                <li><a asp-controller="Notice" asp-action="Index">Notices</a></li>
                                 <li><a asp-controller="Blog" asp-action="Index">Blogs</a></li>
                             </ul>
                         </li>
