notice index view left side done

--- a/EduHomeUI/Views/Home/Index.cshtml
+++ b/EduHomeUI/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿        <!-- Background Area Start -->
+﻿@using EduHomeUI.ViewModels.HomeViewModels;
+@model HomeIndexViewModel 
+       
+<!-- Background Area Start -->
 <section id="slider-container" class="slider-area">
     <div class="slider-owl owl-theme owl-carousel">
         <!-- Start Slingle Slide -->
@@ -77,42 +80,34 @@
             <div class="col-md-6">
                 <div class="notice-left">
                     <h3>notice board</h3>
-                    <div class="single-notice-left mb-25 pb-25">
-                        <h4>5, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
-                    <div class="single-notice-left mb-25 pb-25">
-                        <h4>4, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
-                    <div class="single-notice-left pb-75">
-                        <h4>3, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
-                    <div class="single-notice-left mb-25 pb-25">
-                        <h4>5, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
-                    <div class="single-notice-left mb-25 pb-25">
-                        <h4>4, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
-                    <div class="single-notice-left pb-70">
-                        <h4>3, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
-                    <div class="single-notice-left mb-25 pb-25">
-                        <h4>5, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
-                    <div class="single-notice-left mb-25 pb-25">
-                        <h4>4, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
-                    <div class="single-notice-left pb-70">
-                        <h4>3, June 2023</h4>
-                        <p>I must explain to you how all this mistaken idea of denouncing plasure and praising pain was born and I will give you a complete </p>
-                    </div>
+                    @{
+                        int index = 0;
+                    }
+
+                    @foreach (var notice in Model.Notices.Take(9))
+                    {
+                        string divClass = "single-notice-left";
+                        if (index == 2)
+                        {
+                            divClass += " pb-75";
+                        }
+                        else if (index == 5 || index == 7)
+                        {
+                            divClass += " pb-70";
+                        }
+                        else
+                        {
+                            divClass += " mb-25 pb-25";
+                        }
+
+                        <div class="@divClass">
+                            <h4>@notice.DateCreated.ToString("dd,MMMM,yyyy")</h4>
+                            <p>@notice.Description</p>
+                        </div>
+
+                        index++;
+                    }
+
                 </div>
             </div>
             <div class="col-md-6">
