--- a/EduHomeUI/Views/Home/Index.cshtml
+++ b/EduHomeUI/Views/Home/Index.cshtml
@@ -158,7 +158,7 @@
             </div>
         </div>
         <div class="row">
-            @foreach (var course in Model.Courses)
+            @foreach (var course in Model.Courses.Take(3))
             {
                 <div class="col-lg-4 col-md-6">
                     <div class="single-course">
