--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -460,6 +460,7 @@
                             </a>
                             <ul class="sub-menu" aria-expanded="false">
                                 <li><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                                <li><a asp-controller="AppUser" asp-action="Index">Users</a></li>
                                 <li><a asp-controller="CourseCategory" asp-action="Index">Categories</a></li>
                                 <li><a asp-controller="Course" asp-action="Index">Courses</a></li>
                                 <li><a asp-controller="Language" asp-action="Index">Languages</a></li>
